# LUMT

./: CMakeLists.txt  README.md
input_cards/: circuit_1.txt  circuit_3.txt  fidap037.txt  readme.txt  utm5940.txt
src/: amd_aat.c  amd_defaults.c  amd_order.c  colamd.c  etree.c  etree.h  kuhn_munkres.c  kuhn_munkres.h  lu_config.h  lu_kernel.c  lu_kernel.h  mc64.c  mc64.h  plu_kernel.c  plu_kernel.h  plu_refact_kernel.c  plu_refact_kernel.h  scaling.c  scaling.h  slu_kernel.c  slu_kernel.h  slu_refact_kernel.c  slu_refact_kernel.h  sparse.c  sparse.h  timer.c  timer.h
